--- a/TrdMac/Localizable.strings
+++ b/TrdMac/Localizable.strings
@@ -24,3 +24,5 @@
 "NoSaveText"     = "El documento no pudo ser guardado";
 "NoLoadText"     = "El documento no pudo ser cargado";
 "NoRoot"         = "No hay raices";
+
+"SelSentence"    = "Seleccione una oración";
