--- a/TrdMac/Base.lproj/Localizable.strings
+++ b/TrdMac/Base.lproj/Localizable.strings
@@ -1,37 +1,37 @@
 "UILang" = "1";
 
-"ConjViewWords"   = "Conjugaciones por palabras";
-"ConjViewModes"   = "Conjugaciones por modos";
-"ConjViewPersons" = "Conjugaciones por personas";
+"ConjViewWords"   = "Conjugations (by word)";
+"ConjViewModes"   = "Conjugations (by mode)";
+"ConjViewPersons" = "Conjugations (by person)";
 
 "AppTitle" = "Translator Suite";
-"NewDoc"   = "Documento Nuevo";
+"NewDoc"   = "New Document";
 
-"TextTrdNotSaved" = "El documento traducido no ha sido guardado, ¿Desea guardarlo?";
-"TextSrcNotSaved" = "El documento original no ha sido guardado, ¿Desea guardarlo?";
+"TextTrdNotSaved" = "The translated document could not be saved, Do you want to save it?";
+"TextSrcNotSaved" = "The previous document is not saved, Do you want to save it?";
 
-"Save"            = "Guardar";
-"DontSave"        = "No Guardar";
-"Cancel"          = "Cancelar";
-"WarningTitle"    = "Advertencia";
-"OK"              = "Aceptar";
+"Save"            = "Save";
+"DontSave"        = "Not Save";
+"Cancel"          = "Cancel";
+"WarningTitle"    = "Warning";
+"OK"              = "Accept";
 
-"SaveSourceTitle" = "Guardar el documento fuente";
-"SaveTrdTitle"    = "Guardar el documento traducido";
-"Source"          = "Fuente";
-"Translation"     = "Traducción";
+"SaveSourceTitle" = "Save the source document";
+"SaveTrdTitle"    = "Save the translated document";
+"Source"          = "Source";
+"Translation"     = "Tanslation";
 
-"NoSaveText"     = "El documento no pudo ser guardado";
-"NoLoadText"     = "El documento no pudo ser cargado";
-"NoRoot"         = "No hay raices";
+"NoSaveText"     = "The document could not be saved";
+"NoLoadText"     = "The document could not be loaded";
+"NoRoot"         = "There is no roots";
 
-"SelSentence"    = "Seleccione una oración";
+"SelSentence"    = "Select a sentence";
 
-"TrdAsTipo" = "Translations as:";
+"TrdAsTipo" = "Translations as: ";
 
 "mnuItemMasc" = "Masculine";
 "mnuItemFem"  = "Feminine";
-"mnuItemNtr"  = "Neuter";
+"mnuItemNtr"  = "Neutral";
 
 "mnuItemSng" = "Singular";
 "mnuItemPlr" = "Plurar";
