--- a/TrdMac/it.lproj/Localizable.strings
+++ b/TrdMac/it.lproj/Localizable.strings
@@ -1,40 +1,40 @@
 "UILang" = "2";
 
-"ConjViewWords"   = "Conjugaciones por palabras";
-"ConjViewModes"   = "Conjugaciones por modos";
-"ConjViewPersons" = "Conjugaciones por personas";
+"ConjViewWords"   = "Coniugazioni (per parola)";
+"ConjViewModes"   = "Coniugazioni (per modo)";
+"ConjViewPersons" = "Coniugazioni (per persona)";
 
 "AppTitle" = "Translator Suite";
-"NewDoc"   = "Documento Nuevo";
+"NewDoc"   = "Nuovo Document";
 
-"TextTrdNotSaved" = "El documento traducido no ha sido guardado, ¿Desea guardarlo?";
-"TextSrcNotSaved" = "El documento original no ha sido guardado, ¿Desea guardarlo?";
+"TextTrdNotSaved" = "Il documento tradotto non è potuto essre salvato, Desidera salvare esso?";
+"TextSrcNotSaved" = "Il documento anteriore non è stato salvato, Desidera salvare esso?";
 
-"Save"            = "Guardar";
-"DontSave"        = "No Guardar";
-"Cancel"          = "Cancelar";
-"WarningTitle"    = "Advertencia";
-"OK"              = "Aceptar";
+"Save"            = "Salva";
+"DontSave"        = "Non Salva";
+"Cancel"          = "Annulla";
+"WarningTitle"    = "Avvertenza";
+"OK"              = "Accettare";
 
-"SaveSourceTitle" = "Guardar el documento fuente";
-"SaveTrdTitle"    = "Guardar el documento traducido";
-"Source"          = "Fuente";
-"Translation"     = "Traducción";
+"SaveSourceTitle" = "Salva il documento originale";
+"SaveTrdTitle"    = "Salva il documento tradotto";
+"Source"          = "Originale";
+"Translation"     = "Traduzione";
 
-"NoSaveText"     = "El documento no pudo ser guardado";
-"NoLoadText"     = "El documento no pudo ser cargado";
-"NoRoot"         = "No hay raices";
+"NoSaveText"     = "Il documento non è potuto essere salvato";
+"NoLoadText"     = "Il documento non è potuto essere caricato";
+"NoRoot"         = "Non vi é alcuna radici";
 
-"SelSentence"    = "Seleccione una oración";
+"SelSentence"    = "Selezionare una frase";
 
-"TrdAsTipo" = "Translations as:";
+"TrdAsTipo" = "Traduzioni come: ";
 
-"mnuItemMasc" = "Masculine";
-"mnuItemFem"  = "Feminine";
-"mnuItemNtr"  = "Neuter";
+"mnuItemMasc" = "Maschile";
+"mnuItemFem"  = "Femminile";
+"mnuItemNtr"  = "Neutro";
 
-"mnuItemSng" = "Singular";
-"mnuItemPlr" = "Plurar";
+"mnuItemSng" = "Singolare";
+"mnuItemPlr" = "Plurale";
 
-"DataFrmError" = "The format of '%@' is not correct";
-"Error"        = "Error";
+"DataFrmError" = "Il formato dei '%@' non è corretto";
+"Error"        = "Errore";
